--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <base href="/" />
-    <title>Angular 7 User Registration and Login Example</title>
+    <title>Angular 7 Boilerplate with Login/Register example</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- bootstrap css -->
